--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 
 .container {
   width: 100%;
+  height: 100%;
 }
 
 header {
   height: 150px;
-  background-color: black;
+  background-color: #1a1a1d;
   color: white;
   display: flex;
   flex-direction: column;
@@ -62,6 +63,7 @@ main .movie-list {
   grid-gap: 1.5rem;
 }
 main .movie-list .movie-card {
+  background-color: white;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 0px 10px 1px #b7b7b7;
