--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ header {
 
 header .website-title {
   font-size: 2rem;
-  margin: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 header .movie-search {
-  margin: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 header .movie-search-input {
@@ -34,7 +34,7 @@ header .movie-search-input {
   font-size: 1rem;
   border-radius: 2rem;
   border: none;
-  padding-left: 0.8rem;
+  padding-left: 2rem;
 }
 
 @media (max-width: 786px) {
