--- a/style.css
+++ b/style.css
@@ -37,9 +37,15 @@ header .movie-search-input {
   padding-left: 2rem;
 }
 
-@media (max-width: 786px) {
+@media (max-width: 768px) {
   header .movie-search-input {
     width: 500px;
+  }
+}
+
+@media (max-width: 480px) {
+  header .movie-search-input {
+    width: 300px;
   }
 }
 
@@ -62,6 +68,37 @@ main .movie-list {
   grid-auto-rows: minmax(300px, auto);
   grid-gap: 1.5rem;
 }
+
+@media (max-width: 1300px) {
+  main .movie-list {
+    padding: 1.5rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(300px, auto);
+    grid-gap: 1.5rem;
+  }
+}
+
+@media (max-width: 1100px) {
+  main .movie-list {
+    padding: 1.5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(300px, auto);
+    grid-gap: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  main .movie-list {
+    padding: 1.5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(300px, auto);
+    grid-gap: 1.5rem;
+  }
+}
+
 main .movie-list .movie-card {
   background-color: white;
   border-radius: 10px;
