--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 /* header 디자인 - 검색창 */
 header {
   height: 160px;
-  background-color: #1a1a1d;
+  background-color: #17171b;
   color: white;
   display: flex;
   flex-direction: column;
@@ -105,6 +105,7 @@ main .movie-list {
 main .movie-list .movie-card {
   border-radius: 10px;
   overflow: hidden;
+  color: #17171b;
   box-shadow: 0px 0px 10px 1px #b7b7b7;
 }
 
@@ -114,6 +115,7 @@ main .movie-list .movie-card:hover {
 
 main .movie-list .movie-card .movie-card-body {
   background-color: white;
+  color: #343a40;
   padding: 16px;
 }
 
@@ -164,6 +166,7 @@ main .movie-list .movie-card .movie-image > img {
 
 .modal .close-button > button {
   background-color: transparent;
+  color: #17171b;
   font-size: 2rem;
   border: none;
   cursor: pointer;
@@ -196,29 +199,33 @@ main .movie-list .movie-card .movie-image > img {
 .modal .movie-title {
   font-size: 2rem;
   padding-bottom: 1rem;
+  color: #17171b;
 }
 
 .modal .movie-content {
   font-size: 20px;
   padding-bottom: 2rem;
   line-height: 170%;
+  color: #343a40;
 }
 
 .modal .movie-date {
   font-size: 18px;
   padding-bottom: 1rem;
+  color: #343a40;
 }
 
 .modal .movie-rating {
   font-size: 18px;
   padding-bottom: 2rem;
+  color: #343a40;
 }
 
 .modal .movie-add-button > input {
   width: 100%;
   height: 50px;
   border-radius: 10px;
-  background-color: black;
+  background-color: #17171b;
   color: white;
   border: none;
   cursor: pointer;
