--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ header .website-title {
   font-size: 2rem;
   margin-bottom: 0.5rem;
 }
+header .website-title a {
+  color: white;
+  text-decoration: none;
+}
 
 header .movie-search {
   margin-bottom: 1rem;
@@ -56,6 +60,10 @@ header .book-mark-button {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+header .book-mark-button:hover {
+  color: #b7b7b7;
 }
 
 /* 영화 카드 리스트 디자인 */
@@ -183,45 +191,50 @@ main .movie-list .movie-card .movie-image > img {
 .modal .movie-info-all {
   position: relative;
   top: 20px;
+  margin-bottom: 1rem;
 }
 
-.modal .movie-image > img {
+.modal .detail-movie-image > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   padding-bottom: 1.5rem;
 }
 
-.modal .movie-info {
+.modal .detail-movie-info {
   position: relative;
 }
 
-.modal .movie-title {
+.modal .detail-movie-title {
   font-size: 2rem;
   padding-bottom: 1rem;
   color: #17171b;
 }
 
-.modal .movie-content {
+.modal .detail-movie-content {
   font-size: 20px;
   padding-bottom: 2rem;
   line-height: 170%;
   color: #343a40;
 }
 
-.modal .movie-date {
+.modal .detail-movie-date {
   font-size: 18px;
   padding-bottom: 1rem;
   color: #343a40;
 }
 
-.modal .movie-rating {
+.modal .detail-movie-rating {
   font-size: 18px;
   padding-bottom: 2rem;
   color: #343a40;
 }
 
-.modal .movie-add-button > input {
+.modal .movie-add {
+  margin-bottom: 1.5rem;
+}
+
+.modal .movie-add > input {
   width: 100%;
   height: 50px;
   border-radius: 10px;
@@ -229,11 +242,10 @@ main .movie-list .movie-card .movie-image > img {
   color: white;
   border: none;
   cursor: pointer;
-  margin-bottom: 2rem;
   font-size: 1rem;
   text-align: center;
 }
 
-.modal .movie-add-button:hover {
+.modal .movie-add:hover {
   opacity: 70%;
 }
