--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ header .movie-search-input {
   padding-left: 2rem;
 }
 
+@media (max-width: 1000px) {
+  header .movie-search-input {
+    width: 600px;
+  }
+}
+
 @media (max-width: 768px) {
   header .movie-search-input {
     width: 500px;
@@ -82,7 +88,8 @@ main .movie-list {
 
 @media (max-width: 1300px) {
   main .movie-list {
-    padding: 1.5rem;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(300px, auto);
@@ -92,7 +99,8 @@ main .movie-list {
 
 @media (max-width: 1100px) {
   main .movie-list {
-    padding: 1.5rem;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(300px, auto);
@@ -102,7 +110,8 @@ main .movie-list {
 
 @media (max-width: 768px) {
   main .movie-list {
-    padding: 1.5rem;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(300px, auto);
