--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: #17171b;
 }
 
 .container {
@@ -8,41 +14,62 @@
   height: 100%;
 }
 
-/* header 디자인 - 검색창 */
+/* header navbar 디자인 */
 header {
-  height: 160px;
+  height: 60px;
   background-color: #17171b;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
+  color: #f1f3f5;
+  padding: 1rem 4rem 1rem 4rem;
+  margin: auto;
 }
 
-header .website-title {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+header .navbar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-header .website-title a {
-  color: white;
+
+header .menu-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+header .menu-item {
+  list-style: none;
+  font-size: 1rem;
+  cursor: pointer;
+  padding-left: 1.5rem;
+}
+
+header .web-title {
+  font-family: "Archivo Black", serif;
+  padding-left: 0;
+}
+
+header .menu-item a {
+  color: #f1f3f5;
+  font-size: 1.5rem;
   text-decoration: none;
 }
 
-header .movie-search {
-  margin-bottom: 1rem;
+header .menu-item:hover {
+  opacity: 80%;
 }
 
 header .movie-search-input {
-  width: 800px;
-  height: 50px;
+  width: 500px;
+  height: 40px;
   font-size: 1rem;
   border-radius: 2rem;
   border: none;
-  padding-left: 2rem;
+  padding-left: 1.5rem;
+  background-color: #f1f3f5;
 }
 
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
   header .movie-search-input {
     width: 600px;
   }
@@ -58,23 +85,36 @@ header .movie-search-input {
   header .movie-search-input {
     width: 300px;
   }
-}
+} */
 
 header .book-mark-button {
   font-size: 1rem;
-  color: white;
+  color: #ffd65a;
   background-color: transparent;
   border: none;
   cursor: pointer;
 }
 
 header .book-mark-button:hover {
-  color: #b7b7b7;
+  opacity: 80%;
+}
+
+/* 배너 디자인 */
+main .banner {
+  border-radius: 1rem;
+  margin-bottom: 4rem;
+}
+
+main .banner > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  object-fit: cover;
 }
 
 /* 영화 카드 리스트 디자인 */
 main {
-  padding: 2rem 4rem 2rem 4rem;
+  padding: 0 4rem 2rem 4rem;
 }
 
 main .movie-list {
@@ -123,22 +163,11 @@ main .movie-list .movie-card {
   border-radius: 10px;
   overflow: hidden;
   color: #17171b;
-  box-shadow: 0px 0px 10px 1px #b7b7b7;
 }
 
 main .movie-list .movie-card:hover {
   opacity: 60%;
   box-shadow: 0px 0px 10px 2px #4e4e4e;
-}
-
-main .movie-list .movie-card .movie-card-body {
-  background-color: white;
-  color: #343a40;
-  padding: 16px;
-}
-
-main .movie-list .movie-card .movie-card-body > h2 {
-  padding-bottom: 10px;
 }
 
 main .movie-list .movie-card .movie-image {
@@ -149,6 +178,22 @@ main .movie-list .movie-card .movie-image > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+main .movie-list .movie-card .movie-card-body {
+  height: 96px;
+  color: #f1f3f5;
+  text-align: center;
+  padding: 1rem;
+}
+
+main .movie-list .movie-card .movie-card-body > h2 {
+  font-size: 24px;
+  padding-bottom: 10px;
+}
+
+main .movie-list .movie-card .movie-card-body > p {
+  color: #ced4da;
 }
 
 /* 모달창 디자인 */
@@ -169,7 +214,7 @@ main .movie-list .movie-card .movie-image > img {
   width: 600px;
   height: 600px;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: #f1f3f5;
   border-radius: 10px;
   padding: 1.5rem;
   max-height: calc(100vh - 200px);
@@ -249,7 +294,7 @@ main .movie-list .movie-card .movie-image > img {
   height: 50px;
   border-radius: 10px;
   background-color: #17171b;
-  color: white;
+  color: #f1f3f5;
   border: none;
   cursor: pointer;
   font-size: 1rem;
